Fix: avoid flashing the sidebar on mobile

--- a/src/components/common/PageLayout/styles.module.css
+++ b/src/components/common/PageLayout/styles.module.css
@@ -73,6 +73,10 @@
   .main {
     padding-left: 0;
   }
+
+  .smDrawerHidden {
+    display: none;
+  }
 }
 
 @media (max-width: 600px) {
